--- a/led-controller.html
+++ b/led-controller.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   RED.nodes.registerType('led-controller',{
-      category: 'function',
-      color: '#a6bbcf',
+      category: 'Matrix',
+      color: '#3FADB5',
       defaults: {
           name: {value:""},
           brightness: {value:"15"},
@@ -12,7 +12,7 @@
       },
       inputs:1,
       outputs:1,
-      icon: "file.png",
+      icon: "icon.png",
       label: function() {
           return this.name||"led-controller";
       }
