--- a/led-controller.html
+++ b/led-controller.html
@@ -12,7 +12,7 @@
       },
       inputs:1,
       outputs:1,
-      icon: "icon.png",
+      icon: "led-matrix-icon.png",
       label: function() {
           return this.name||"led-controller";
       }
